# LibChemist

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
LibChemist/: Atom.cpp  Atom.hpp  BasisSet.cpp  BasisSet.hpp  BasisSetParser.cpp  BasisSetParser.hpp  BasisShell.cpp  BasisShell.hpp  CMakeLists.txt  SetOfAtoms.cpp  SetOfAtoms.hpp  SetOfAtomsParser.cpp  SetOfAtomsParser.hpp  ShellTypes.cpp  ShellTypes.hpp  Utilities.hpp  basisset.hpp.autosave  basissetparser.hpp.autosave
LibChemist-test/: CMakeLists.txt  TestHelpers.hpp
LibChemist-test/UnitTests/: CMakeLists.txt  TestAtom.cpp  TestAtomicInfo.cpp  TestBasisSet.cpp  TestBasisSetParser.cpp  TestBasisShell.cpp  TestSetOfAtoms.cpp  TestSetOfAtomsParser.cpp
LibChemist/lut/: AtomicInfo.cpp  AtomicInfo.hpp  CMakeLists.txt
cmake/: LibChemistConfig.cmake.in  cmake_macros.cmake  cmake_uninstall.cmake.in
